@@ -12,3 +12,7 @@ Add vocab "shoutout_option" for general of CXi
 Add general_cxi field to shoutout content type
     type:boolean
     values: yes, no
+
+Add the new general_cxi field to the top of the shoutout comment view
+    No label and hide from display
+    Edit the format row settings and add this row class with this replacement pattern "general-shoutout-[field_general_cxi]"
